--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE HTML>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="5; url=http://github.com/fujion/fujion.github.io/wiki">
+<meta http-equiv="refresh" content="3; url=http://github.com/fujion/fujion.github.io/wiki">
 
 <title>Redirecting to Fujion Framework...</title>
+<div style="text-align:center">
+<h1>
+Prepare to experience...
+</h1>
+<img src="images/SmallLogo.png">
+<h2>
 If you are not redirected automatically, follow this <a href='http://github.com/fujion/fujion.github.io/wiki'>link.</a>
+</h2>
+</div>
 
 <!-- Google Analytics -->
 
