--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="3; url=http://github.com/fujion/fujion.github.io/wiki">
+<meta http-equiv="refresh" content="3; url=http://github.com/fujion/fujion-framework/wiki">
 
 <title>Redirecting to Fujion Framework...</title>
 <div style="text-align:center">
