--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Prepare to experience...
 </h1>
 <img src="images/SmallLogo.png">
 <h2>
-If you are not redirected automatically, follow this <a href='http://github.com/fujion/fujion.github.io/wiki'>link.</a>
+If you are not redirected automatically, follow this <a href='http://github.com/fujion/fujion-framework/wiki'>link.</a>
 </h2>
 </div>
 
