--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@ If you are not redirected automatically, follow this <a href='http://github.com/
 </h2>
 </div>
 
-<!-- Google Analytics -->
-
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45438407-2"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-45438407-2', 'auto');
-  ga('send', 'pageview');
-
+  gtag('config', 'UA-45438407-2');
 </script>
-<!-- End Google Analytics -->
