--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="3; url=http://github.com/fujion/fujion-framework/wiki">
+<meta http-equiv="refresh" content="3; url=https://github.com/fujion/fujion-framework/wiki">
 
 <title>Redirecting to Fujion Framework...</title>
 <div style="text-align:center">
@@ -9,7 +9,7 @@ Prepare to experience...
 </h1>
 <img src="images/SmallLogo.png">
 <h2>
-If you are not redirected automatically, follow this <a href='http://github.com/fujion/fujion-framework/wiki'>link.</a>
+If you are not redirected automatically, follow this <a href='https://github.com/fujion/fujion-framework/wiki'>link.</a>
 </h2>
 </div>
 
